# mlops_hw

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml
src/: .gitignore  alembic.ini  exceptions.py  main.py  models.py
src/alembic/: env.py
src/alembic/versions/: 186b9a9fc4a7_.py  bc865e45fefc_.py
src/api/: main.py
src/db/: crud.py  db_setup.py  models.py  schemas.py
tests/: ci_tests.yml  conftest.py  pytest.ini  test_app.py
